--- a/05-Guess-My-Number/starter/style.css
+++ b/05-Guess-My-Number/starter/style.css
@@ -21,12 +21,12 @@ body {
 /* LAYOUT */
 header {
   position: relative;
-  height: 35vh;
+  height: 25vh;
   border-bottom: 7px solid #eee;
 }
 
 main {
-  height: 65vh;
+  height: 45vh;
   color: #eee;
   display: flex;
   align-items: center;
@@ -116,4 +116,8 @@ h1 {
 
 .label-score {
   margin-bottom: 2rem;
+}
+
+.medals {
+  font-size: x-large;
 }
